# Aha

./: .clang-format  .gitignore  .gitmodules  Aha.sln  CMakeLists.txt  Gauss.cpp  Gauss.sln  Gauss.vcxproj  Test.vcxproj  install.bat  setup.py  test.cpp
aha/: CMakeLists.txt  aha.cpp  aha.template  aha.vcxproj
docs/: Gaussian.odt
include/: MersenneTwister.h  aha.h  defs.h  eigen.h  gaussian.h  generator.h  matrix.h  model.h  mvn.h  mvn_impl.h  timer.h  version.h
scripts/: multivariate_normal.py  test.py  test_dump_load.py  test_predict.py  test_predict_ex.py
src/: py_aha.cpp
test/: CMakeLists.txt  test.cpp
